--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+pre {
+  padding: 10px;
+  white-space: pre-wrap;
+  background-color: #333333;
+  color: white;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
@@ -24,16 +36,28 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 85vh;
 }
 
 input.error {
   border-color: red;
 }
 
-
 .input-feedback {
   color: red;
   height: 5px;
   margin-top: -12px;
+}
+
+.ql-editor iframe {
+  min-height: 300px;
+}
+
+.ql-editor img {
+  max-height: 300px;
+  object-fit: contain;
+}
+
+.postPage iframe {
+  min-height: 400px;
 }
